--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css"> <!-- Hubungkan CSS -->
 </head>
 <body>
-  <h1 id="judul">Halo Dunia</h1>
+  <h1 id="judul">Halo</h1>
   <p>Ini contoh halaman sederhana.</p>
   <button id="tombol">Klik Saya</button>
 
