--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <link rel="stylesheet" href="style.css"> <!-- Hubungkan CSS -->
 </head>
 <body>
-  <h1 id="judul">Halo</h1>
-  <p>Ini contoh halaman sederhana.</p>
-  <button id="tombol">Klik Saya</button>
-
-  <script src="script.js"></script> <!-- Hubungkan JS -->
+  <h1>Selamat Datang di Contoh Web</h1>
+  <p>Ini adalah paragraf pertama di halaman web ini.</p>
+  <p>Ini adalah paragraf kedua di halaman web ini.</p>
 </body>
-</html>
